<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Colores">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="90dp"
        android:text="@string/btncolores"
        android:textSize="50dp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/red"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:layout_marginBottom="50dp"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/blue"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="50dp"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/black"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"/>



</LinearLayout>