<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuApp">
<TextView

android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulomenu"
        android:textSize="80sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>


    <Button
        android:id="@+id/bntColor"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/btncolores"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnAnimales"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btnanimales"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnfrutas"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/btnfrutas"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bntJuego"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:textSize="30sp"
        android:text="Juegos"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>




</LinearLayout>