<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frutas">

    <TextView
        android:id="@+id/frutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnfrutas"
        android:textSize="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:src="@drawable/pina"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piña"
            android:textSize="45dp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:src="@drawable/manzana"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manzana"
            android:textSize="45dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:src="@drawable/fresas"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fresas"
            android:textSize="45dp"
            android:layout_gravity="center"/>
    </LinearLayout>



</LinearLayout>